# DolphinDB

./: README.md
StatsModels/: CMakeLists.txt  README_CN.md
StatsModels/src/: statsmodels.cpp  statsmodels.h
doc/: README.md  demo.d1  note.d1  note.d10  note.d2  note.d4  note.d5  note.d6  note.d7  note.d8  note.d9  note_11.md  note_d12.md  note_d13.md  plugin_advance.md
lgbm/: CMakeLists.txt  README_CN.md
lgbm/LightGBM/: CMakeLists.txt
lgbm/LightGBM/include/LightGBM/: boosting.h  c_api.h  config.h  dataset.h  dataset_loader.h  tree_learner.h
lgbm/LightGBM/src/: c_api.cpp
lgbm/LightGBM/src/application/: application.cpp  predictor.hpp
lgbm/LightGBM/src/boosting/: gbdt.cpp  gbdt.h  gbdt_model_text.cpp
lgbm/LightGBM/src/io/: config.cpp  config_auto.cpp  dataset_loader.cpp  tree.cpp
lgbm/LightGBM/src/treelearner/: dolphindb_parallel_tree_learner.cpp  parallel_tree_learner.h  serial_tree_learner.cpp  tree_learner.cpp
lgbm/src/: lgbm.cpp  lgbm.h
signal/: CMakeLists.txt  README_CN.md
signal/src/: signal.cpp  signal.h
